--- a/package.json
+++ b/package.json
@@ -1,14 +1,14 @@
 {
-  "name": "react-mobx-starter",
+  "name": "react-mobx--typescript-starter",
   "version": "1.0.0",
-  "description": "",
+  "description": "react-mobx--typescript-starter",
   "private": true,
   "scripts": {
-    "start": "webpack-dev-server --config webpack/webpack.config.dev.js",
-    "build": "webpack --config webpack/webpack.config.prod.js"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --open --config webpack/webpack.config.dev.js",
+    "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.config.prod.js"
   },
   "keywords": [],
-  "author": "",
+  "author": "lc",
   "license": "ISC",
   "devDependencies": {
     "@babel/core": "^7.5.5",
@@ -62,12 +62,25 @@
   "dependencies": {
     "@babel/polyfill": "^7.10.1",
     "@babel/preset-env": "^7.8.4",
+    "@babel/preset-typescript": "^7.10.1",
     "@babel/runtime": "^7.10.2",
     "@babel/runtime-corejs2": "^7.10.2",
+    "@types/react": "^16.9.37",
+    "@types/react-dom": "^16.9.8",
+    "@types/react-loadable": "^5.5.3",
+    "@types/react-router-config": "^5.0.1",
+    "@types/react-router-dom": "^5.1.5",
+    "@typescript-eslint/eslint-plugin": "^3.3.0",
     "antd": "^3.22.2",
+    "cross-env": "^7.0.2",
+    "eslint-config-airbnb": "^18.1.0",
+    "eslint-formatter-friendly": "^7.0.0",
+    "lodash": "^4.17.15",
     "mobx": "^5.13.0",
     "mobx-react": "^6.1.3",
     "moment": "^2.24.0",
+    "postcss-cssnext": "^3.1.0",
+    "postcss-flexbugs-fixes": "^4.2.1",
     "qrcode-webpack-plugin": "^1.0.4",
     "qs": "^6.8.0",
     "react": "^16.9.0",
