--- a/.eslintrc
+++ b/.eslintrc
@@ -34,19 +34,19 @@
     "react/display-name": "off",
     "react/jsx-key": "warn",
 
-    // "@typescript-eslint/camelcase": [
-    //   "error",
-    //   {
-    //     "allow": [
-    //       "^UNSAFE_",
-    //       "child_process",
-    //       "drop_debugger",
-    //       "drop_console",
-    //       "keep_classnames",
-    //       "keep_fnames"
-    //     ]
-    //   }
-    // ],
+    "@typescript-eslint/camelcase": [
+      "error",
+      {
+        "allow": [
+          "^UNSAFE_",
+          "child_process",
+          "drop_debugger",
+          "drop_console",
+          "keep_classnames",
+          "keep_fnames"
+        ]
+      }
+    ],
     "@typescript-eslint/no-non-null-assertion": "off",
     "class-methods-use-this": "warn",
     "consistent-return": "warn",
