--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,7 @@
   "compilerOptions": {
     "experimentalDecorators": true,
     "outDir": "./dist/",
+    // 是否允许 this 有隐式的 any 类型
     "noImplicitAny": true,
     "suppressImplicitAnyIndexErrors": true,
     "removeComments": true,
@@ -20,10 +21,22 @@
     "watch": true,
     "baseUrl": ".",
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "src/*": ["./src/*"],
+      "assets/*": ["./src/assets/*"],
+      "utils/*": ["./src/utils/*"],
+      "pages/*": ["./src/pages/*"],
+      "components/*": ["./src/components/*"]
     },
     //要包含的类型声明文件名列表；如果指定了types，只有被列出来的包才会被包含进来
-    "types": ["react", "react-dom", "react-router-dom", "antd", "lodash"]
+    "types": [
+      "node",
+      "react",
+      "react-dom",
+      "react-router-dom",
+      "antd",
+      "lodash"
+    ]
   },
   "exclude": ["dist", "node_modules"],
   "include": ["./src/**/*"]
