--- a/.eslintrc
+++ b/.eslintrc
@@ -7,14 +7,15 @@
   "parser": "@typescript-eslint/parser",
   "extends": [
     "airbnb",
-    "plugin:@typescript-eslint/recommended",
     "eslint:recommended",
-    "plugin:react/recommended"
+    "plugin:react/recommended",
+    "plugin:@typescript-eslint/recommended"
   ],
   "plugins": ["react", "@typescript-eslint"],
   "parserOptions": {
     "ecmaVersion": 7,
     "sourceType": "module",
+    "project": "./tsconfig.json",
     "ecmaFeatures": {
       "impliedStrict": true,
       "jsx": true,
@@ -27,12 +28,20 @@
     "@typescript-eslint/explicit-function-return-type": "off",
     "no-console": "off",
     "semi": "warn",
-    "strict": 0,
     "react/jsx-uses-react": "error",
     "react/jsx-uses-vars": "error",
-    "no-unused-vars": "warn",
     "react/display-name": "off",
     "react/jsx-key": "warn",
+    "@typescript-eslint/explicit-member-accessibility": "warn",
+    "@typescript-eslint/interface-name-prefix": "off",
+    "no-unused-vars": "warn",
+    "@typescript-eslint/no-unused-vars": [
+      "error",
+      {
+        "args": "none",
+        "ignoreRestSiblings": true
+      }
+    ],
 
     "@typescript-eslint/camelcase": [
       "error",
@@ -47,71 +56,34 @@
         ]
       }
     ],
-    "@typescript-eslint/no-non-null-assertion": "off",
-    "class-methods-use-this": "warn",
-    "consistent-return": "warn",
-    "eqeqeq": "warn",
-    "guard-for-in": "warn",
-    "import/no-extraneous-dependencies": "warn",
-    "import/no-named-as-default": "warn",
-    "import/no-named-as-default-member": "warn",
-    "import/no-cycle": "warn",
-    "import/order": [
+    "prefer-destructuring": [
       "error",
       {
-        "groups": [
-          "builtin", // 1. node "builtin" modules
-          "external", // 2. "external" modules(node_modules)
-          "internal", // 3. "internal" modules(webpack alias)
-          "parent", // 4. modules from a "parent" directory
-          "sibling", // 5. "sibling" modules from the same or a sibling's directory
-          "index" // 6. "index" of the current directory
-        ],
-        "newlines-between": "always-and-inside-groups"
+        // 变量声明中的数组及对象解构
+        "VariableDeclarator": {
+          "array": false,
+          "object": true
+        },
+        // 赋值表达式的数组及对象解构，赋值使用解构代码不易读
+        "AssignmentExpression": {
+          "array": false,
+          "object": false
+        }
+      },
+      {
+        // 强制属性重命名
+        "enforceForRenamedProperties": false
       }
     ],
-    "import/prefer-default-export": "off",
     "jsx-a11y/anchor-is-valid": "off",
     "jsx-a11y/click-events-have-key-events": "off",
     "jsx-a11y/media-has-caption": "warn",
     "jsx-a11y/no-noninteractive-element-interactions": "off",
     "jsx-a11y/no-static-element-interactions": "off",
-    "no-bitwise": "warn",
-    "no-cond-assign": "warn",
-    "no-loop-func": "warn",
-    "no-nested-ternary": "warn",
-    "no-param-reassign": "warn",
-    "no-plusplus": "warn",
-    "no-prototype-builtins": "warn",
-    "no-restricted-globals": "warn",
-    "no-restricted-syntax": "warn",
-    "no-return-assign": "warn",
-    "no-script-url": "warn",
-    "no-shadow": "warn",
-    "no-unused-expressions": "warn",
-    "no-use-before-define": "warn",
-    "no-useless-constructor": "warn",
-    "one-var": "warn",
-    "prefer-const": "warn",
-    "prefer-destructuring": [
-      "warn",
-      {
-        "AssignmentExpression": {
-          "array": false,
-          "object": false
-        },
-        "VariableDeclarator": {
-          "array": false,
-          "object": true
-        }
-      },
-      {
-        "enforceForRenamedProperties": false
-      }
-    ],
-    "prefer-promise-reject-errors": "warn",
-    "radix": "warn",
-    "react/button-has-type": "warn",
+    "import/no-extraneous-dependencies": "off",
+    "no-restricted-syntax": "off",
+    "no-unused-expressions": "off",
+    "import/no-unresolved": "off",
     "react/destructuring-assignment": "warn",
     "react/jsx-filename-extension": [
       "error",
@@ -119,35 +91,10 @@
         "extensions": [".js", ".jsx", ".ts", ".tsx"]
       }
     ],
-    "react/jsx-no-bind": "warn",
-    "react/no-access-state-in-setstate": "warn",
-    "react/no-array-index-key": "warn",
-    "react/no-did-mount-set-state": "warn",
     "react/prefer-stateless-function": "off",
     // 使用 TS 无需使用 prop-types
     "react/prop-types": "off",
-    "react/sort-comp": "warn",
-    "sort-imports": [
-      "error",
-      {
-        "ignoreCase": true,
-        "ignoreDeclarationSort": true,
-        "ignoreMemberSort": false,
-        "memberSyntaxSortOrder": ["none", "all", "multiple", "single"]
-      }
-    ],
-    // "prettier/prettier": "error",
-    "import/extensions": [
-      "error",
-      "ignorePackages",
-      {
-        "js": "never",
-        "jsx": "never",
-        "ts": "never",
-        "tsx": "never"
-      }
-    ],
-    "no-lone-blocks": "off"
+    "prettier/prettier": "off"
   },
   "settings": {
     "import/resolver": {
