--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "start": "cross-env NODE_ENV=development webpack-dev-server --open --config webpack/webpack.config.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.config.prod.js"
+    "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.config.prod.js",
+    "build:dll": "cross-env NODE_ENV=production webpack --config webpack/webpack.dll.config.js"
   },
   "keywords": [],
   "author": "lc",
@@ -72,6 +73,7 @@
     "@types/react-router-config": "^5.0.1",
     "@types/react-router-dom": "^5.1.5",
     "@typescript-eslint/eslint-plugin": "^3.3.0",
+    "add-asset-html-webpack-plugin": "^3.1.3",
     "antd": "^3.22.2",
     "cross-env": "^7.0.2",
     "eslint-config-airbnb": "^18.1.0",
