--- a/package.json
+++ b/package.json
@@ -52,7 +52,6 @@
     "progress-bar-webpack-plugin": "^1.12.1",
     "prop-types": "^15.7.2",
     "style-loader": "^1.0.0",
-    "uglifyjs-webpack-plugin": "^2.2.0",
     "video-react": "^0.14.1",
     "webpack": "^4.43.0",
     "webpack-cli": "^3.3.11",
@@ -78,6 +77,7 @@
     "cross-env": "^7.0.2",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-formatter-friendly": "^7.0.0",
+    "happypack": "^5.0.1",
     "lodash": "^4.17.15",
     "mobx": "^5.13.0",
     "mobx-react": "^6.1.3",
