--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
   "description": "react-mobx--typescript-starter",
   "private": true,
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --open --config webpack/webpack.config.dev.js",
-    "build": "cross-env NODE_ENV=production webpack --config webpack/webpack.config.prod.js",
+    "start": "npm run dev",
+    "dev": "cross-env NODE_ENV=development API_ENV=dev webpack-dev-server --open --config webpack/webpack.config.dev.js",
+    "qa": "cross-env NODE_ENV=development API_ENV=qa webpack-dev-server --open --config webpack/webpack.config.dev.js",
+    "build": "cross-env NODE_ENV=production API_ENV=online webpack --config webpack/webpack.config.prod.js",
     "build:dll": "cross-env NODE_ENV=production webpack --config webpack/webpack.dll.config.js"
   },
   "keywords": [],
