--- a/package.json
+++ b/package.json
@@ -67,6 +67,7 @@
     "@babel/preset-typescript": "^7.10.1",
     "@babel/runtime": "^7.10.2",
     "@babel/runtime-corejs2": "^7.10.2",
+    "@types/js-cookie": "^2.2.6",
     "@types/react": "^16.9.37",
     "@types/react-color": "^3.0.2",
     "@types/react-dom": "^16.9.8",
@@ -76,10 +77,12 @@
     "@typescript-eslint/eslint-plugin": "^3.3.0",
     "add-asset-html-webpack-plugin": "^3.1.3",
     "antd": "^3.22.2",
+    "axios": "^0.19.2",
     "cross-env": "^7.0.2",
     "eslint-config-airbnb": "^18.1.0",
     "eslint-formatter-friendly": "^7.0.0",
     "happypack": "^5.0.1",
+    "js-cookie": "^2.2.1",
     "lodash": "^4.17.15",
     "mobx": "^5.13.0",
     "mobx-react": "^6.1.3",
