--- a/package.json
+++ b/package.json
@@ -7,7 +7,8 @@
     "start": "npm run dev",
     "dev": "cross-env NODE_ENV=development API_ENV=dev webpack-dev-server --open --config webpack/webpack.config.dev.js",
     "qa": "cross-env NODE_ENV=development API_ENV=qa webpack-dev-server --open --config webpack/webpack.config.dev.js",
-    "build": "cross-env NODE_ENV=production API_ENV=online webpack --config webpack/webpack.config.prod.js",
+    "build": "cross-env NODE_ENV=production API_ENV=online ANALYZE_ENV=false webpack --config webpack/webpack.config.prod.js",
+    "analyze": "cross-env NODE_ENV=production ANALYZE_ENV=true webpack --config webpack/webpack.config.prod.js",
     "build:dll": "cross-env NODE_ENV=production webpack --config webpack/webpack.dll.config.js"
   },
   "keywords": [],
@@ -56,6 +57,7 @@
     "style-loader": "^1.0.0",
     "video-react": "^0.14.1",
     "webpack": "^4.43.0",
+    "webpack-bundle-analyzer": "^3.8.0",
     "webpack-cli": "^3.3.11",
     "webpack-dev-server": "^3.8.0",
     "webpack-merge": "^4.2.1",
